--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ header {
 /* Video */
 .video {
     grid-area: video;
-    max-width: 100vw; 
+    width: 100%; 
 
     position: relative;
     bottom: 2px;
@@ -154,7 +154,7 @@ header {
     bottom: 6px;
 
     height: 5vw;
-    max-width: 100vw;
+    width: 100%;
     background-color: var(--logo-black);
 }
 
@@ -524,6 +524,8 @@ header, footer, main {
     .artists {
         position: relative;
         bottom: 10vw;
+
+        padding: 8vw 0;
     }
     
     /* Text */
@@ -534,6 +536,8 @@ header, footer, main {
 
     .artists h2 {
         margin-top: 10vw;
+        margin-left: 8vw;
+        margin-right: 8vw;
     }
     
     p {
@@ -564,16 +568,19 @@ header, footer, main {
 
     /* Reorder artists section */
     .img {
+        width: 100%;
         display: block;
-        max-width: 100vw;
         order: 1;
     }
 
     .artists img {
+        height: 100%;
         width: 100%;
     }
 
     .artists p {
+        margin-left: 8vw;
+        margin-right: 8vw;
         order: 3;
     }
 
