--- a/style.css
+++ b/style.css
@@ -18,8 +18,20 @@
     visibility: hidden;
 }
 
+.visually-hidden {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+  }
+  
+
 /* Global settings */
-* {
+*, *::before, *::after {
     padding: 0;
     margin: 0;
     border: 0;
@@ -45,17 +57,37 @@ body {
 
 /* Header */
 header {
+    position: relative;
     grid-area: header;
-    display: grid;
-    grid-template-areas:
-        "wave"
-        "video"
+
+    display: flex;
+    flex-direction: column;
 }
 
-.wave {
-    grid-area: wave;
-    background: url('./vectors/header_vector.svg') no-repeat center/contain;
-    aspect-ratio: 1441/210;
+.svg-head {
+    position: absolute;
+    top: 0;
+
+    width: 100%;
+    aspect-ratio: 1440/209;
+}
+
+.svg-head-mobile {
+    position: absolute;
+    top: 0;
+
+    width: 100%;
+    aspect-ratio: 463/183;
+
+    display: none;
+}
+
+.nav-top {
+    position: relative;
+    z-index: 1;
+
+    width: 100%;
+    aspect-ratio: 1440/209;
 
     display: flex;
     justify-content: flex-end;
@@ -74,9 +106,10 @@ header {
 }
 
 .lang-icon {
-    margin-right: 11.75vw;
+    flex: 1;
+    margin-right: 11.8vw;
     margin-bottom: 2.25vw;
-    width: 2.75vw;
+    max-width: 2.75vw;
     background: url('./vectors/language_icon.svg') no-repeat center/contain;
     aspect-ratio: 41/38;
 
@@ -93,66 +126,7 @@ header {
     opacity: 0.5;
 }
 
-/* Dropdown menu */
-
-/* .dropdown {
-    position: absolute;
-    opacity: 0;
-    z-index: 2;
-
-    list-style: none;
-
-    background: var(--logo-grey);
-    border-radius: 4px;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    height: 2rem;
-    margin-top: 2vw;
-    padding: 0.5rem;
-
-    transform: translateX(-2vw);
-
-    transition: opacity .15s ease-out;
-}
-
-.has-dropdown:focus-within .dropdown {
-    opacity: 1;
-    pointer-events: auto;
-}
-
-.dropdown-item {
-    margin: 0 0.5vw;
-}
-
-.dropdown a {
-    font-size: 1rem;
-    text-decoration: none;
-    color: var(--black-6);
-    font-weight: 700;
-
-    transition: color 270ms;
-}
-
-.dropdown a:hover {
-    color: var(--accentorange);
-} */
-
-/* Video */
-.video {
-    grid-area: video;
-    width: 100%; 
-
-    position: relative;
-    bottom: 2px;
-}
-
 .black-line {
-    position: relative;
-    bottom: 6px;
-
     height: 5vw;
     width: 100%;
     background-color: var(--logo-black);
@@ -160,8 +134,6 @@ header {
 
 video {
     width: 100%;
-    margin: 0;
-    /* overflow: hidden; */
 }
 
 /* Main */
@@ -171,7 +143,7 @@ main {
 
 .main-section {
     position: relative;
-    bottom: 3.25vw;
+    bottom: 2.5vw;
 
     width: 82vw;
     margin: auto;
@@ -322,48 +294,69 @@ p {
 }
 
 /* Footer */
+
+
+
 footer {
+    position: relative;
     grid-area: footer;
-    background: url('./vectors/bottom_wave.svg') no-repeat center/contain;
-    aspect-ratio: 1441/163;
+}
+
+.bottom-svg {
+    position: absolute;
+    bottom: 0;
+
+    width: 100%;
+    aspect-ratio: 1440/162;
+}
+
+.bottom-svg-mobile {
+    position: absolute;
+    bottom: 0;
+
+    width: 100%;
+    aspect-ratio: 390/168;
+
+    display: none;
+}
+
+.nav-bottom {
+    position: relative;
+    z-index: 1;
+
+    width: 100%;
+    aspect-ratio: 1440/162;
 
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: flex-end; 
 
     padding: 2vw;
 }
 
-footer > * {
+.nav-bottom p {
     font-size: 1rem;
     font-weight: 400;
     margin: 0 5vw;
-}
 
-footer p {
+    line-height: normal;
+
     color: var(--logo-grey, #F0EFF0);
 }
 
-footer a {
+.nav-bottom a {
+    font-size: 1rem;
+    font-weight: 400;
+    margin: 0 5vw;
     color: var(--accentorange, #E54800);
     text-decoration: none;
 }
 
-header, footer, main {
-    width: 100%;
-}
-
-
-
 /* Tablet styles */
 @media only screen and (min-width: 681px) and (max-width: 965px) {
-    .main-section {
-        bottom: 4vw;
-    }
-
     /* Motto */
     .motto {
-        width: 25vw;
+        max-width: 25.3vw;
         margin-bottom: 2.5vw;
         margin-left: 11vw;
     
@@ -372,17 +365,14 @@ header, footer, main {
 
     /* Language icon */
     .lang-icon {
-        margin-right: 12vw;
-        margin-bottom: 2.5vw;
+        margin-right: 11.75vw;
+        margin-bottom: 2.3vw;
     }
 
-    /* Dropdown */
-    /* .dropdown {
-        transform: translateX(-3vw);
-    } */
-
-
     /* Main section */
+    .main-section {
+        bottom: 4vw;
+    }
 
     .card {
         padding: 4.5vw;
@@ -438,17 +428,8 @@ header, footer, main {
     }
 
     /* Footer */
-    footer > * {
+    .nav-bottom p, .nav-bottom a {
         font-size: 0.75rem;
-        font-weight: 400;
-        margin: 0 5vw 0.5vw 5vw;
-
-        max-width: 50vw;
-        line-height: normal;
-    }
-
-    header, footer, main {
-        width: 100%;
     }
 }
 
@@ -456,17 +437,22 @@ header, footer, main {
 @media only screen and (max-width: 680px) {
     
     /* Wave header */
-    .wave {
-        background: url('./vectors/mobile_header_vector.svg') no-repeat center/contain;
-        aspect-ratio: 464/184;
-        
-        justify-content: space-between;
-        align-items: end;
+    .svg-head {
+        display: none;
     }
+
+    .svg-head-mobile {
+        display: block;
+    }
+
+    .nav-top {
+        aspect-ratio: 463/183;
+    }
+
 
     /* Motto */
     .motto {
-        width: 25vw;
+        max-width: 100%;
         margin-bottom: 3vw;
         margin-left: 12.5vw;
     
@@ -479,22 +465,6 @@ header, footer, main {
         margin-bottom: 4vw;
         width: 5vw;
     }
-
-    /* Dropdown menu */
-    /* .dropdown {
-        margin-top: 4vw;
-        padding: 0.5rem;
-    
-        transform: translateX(-7vw);
-    }
-    
-    .dropdown-item {
-        margin: 0 1vw;
-    }
-
-    .dropdown-item a {
-        font-size: 1.5rem;
-    } */
 
     /* Main section */
     .main-section {
@@ -617,24 +587,22 @@ header, footer, main {
 
     /* Footer section */
 
-    footer {
-
-
-        background: url('./vectors/mobile_bottom_wave.svg') no-repeat center/contain;
-        aspect-ratio: 391/169;
+    .bottom-svg {
+        display: none;
     }
 
-    footer > * {
+    .bottom-svg-mobile {
+        display: block;
+    }
+
+    .nav-bottom {
+        aspect-ratio: 390/168;
+        padding-bottom: 5vw;
+    }
+
+    .nav-bottom p, .nav-bottom a {
         font-size: 0.75rem;
-        font-weight: 400;
-        margin: 0 5vw 5vw 5vw;
-
-        max-width: 50vw;
         line-height: normal;
-    }
-
-    header, footer, main {
-        width: 100%;
     }
 
     .black-line {
