--- a/style.css
+++ b/style.css
@@ -41,8 +41,6 @@ body {
     font-style: normal;
     line-height: normal;
 
-    min-height: 100vh;
-
     /* Global grid */
     display: grid;
     grid-template-areas:
@@ -142,7 +140,7 @@ main {
     position: relative;
     bottom: 2.5vw;
 
-    width: 82vw;
+    width: 80vw;
     margin: auto;
 
     display: flex;
@@ -184,16 +182,17 @@ p {
     height: 4.5rem;
 
     text-decoration: none;
-
     cursor: pointer;
+
     margin: 0 auto;
     padding: 0.85vw 1vw;
 
     display: inline-flex;
     justify-content: space-between;
     align-items: center;
+    gap: 1rem;
 
-    border-radius: 4px;
+    border-radius: 10px;
     box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.07), 3px 3px 3px 0px rgba(0, 0, 0, 0.05), 5px 5px 5px 0px rgba(255, 255, 255, 0.04) inset, 3px 3px 3px 0px rgba(252, 252, 252, 0.08) inset;
 
     transition: opacity 270ms;
@@ -236,10 +235,8 @@ p {
     position: relative;
     top: 0.2rem;
 
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     font-weight: 700;
-
-    margin-left: 1rem;
 }
 
 .call-us {
@@ -253,7 +250,7 @@ p {
 /* Contact */
 .contact-section {
     grid-area: contact;
-    margin-bottom: 6vw;
+    margin: 5vw 0;
 
     height: 5vw;
 
@@ -265,7 +262,7 @@ p {
 
 /* Contact cards */
 .contact-card {
-    min-height: 2rem;
+    /* min-height: 2rem; */
 
     display: flex;
     justify-content: space-between;
@@ -330,15 +327,12 @@ footer {
     justify-content: space-between;
     align-items: flex-end; 
 
-    padding: 2vw;
+    padding: 0 10vw 2vw 10vw;
 }
 
-.nav-bottom p {
+.nav-bottom span {
     font-size: 1rem;
     font-weight: 400;
-    margin: 0 5vw;
-
-    line-height: normal;
 
     color: var(--logo-grey, #F0EFF0);
 }
@@ -346,7 +340,7 @@ footer {
 .nav-bottom a {
     font-size: 1rem;
     font-weight: 400;
-    margin: 0 5vw;
+
     color: var(--accentorange, #E54800);
     text-decoration: none;
 }
@@ -368,13 +362,8 @@ footer {
         margin-bottom: 2.3vw;
     }
 
-    /* Main section */
-    .main-section {
-        bottom: 4vw;
-    }
-
     .card {
-        padding: 4.5vw;
+        padding: 5vw;
     }
 
     /* Text */
@@ -403,19 +392,8 @@ footer {
     .icon {
         width: 1.5rem;
     }
-
-
-    /* Contact section */
-    .contact-section {
-        margin-bottom: 5vw;
-        height: 7vw;
-    }
     
     /* Contact cards */
-    .contact-card {
-        min-height: 1.5rem;
-    }
-    
     .contact-card p {
         font-size: 1rem;
         margin-left: 0.25rem;
@@ -427,7 +405,7 @@ footer {
     }
 
     /* Footer */
-    .nav-bottom p, .nav-bottom a {
+    .nav-bottom span, .nav-bottom a {
         font-size: 0.75rem;
     }
 }
@@ -504,7 +482,7 @@ footer {
     /* Text */
     h2 {
         font-size: 1.25rem;
-        margin-bottom: 8vw;
+        margin-bottom: 6vw;
     }
 
     .artists h2 {
@@ -565,16 +543,15 @@ footer {
 
     /* Contact section */
     .contact-section {
-        margin-bottom: 5vw;
+        margin: 10vw 0;
     
-        height: 15vw;
+        height: 5vw;
 
         align-items: flex-start;
     }
     
     /* Contact cards */
     .contact-card {
-        min-height: 1.5rem;
         margin-left: 10vw;
     }
     
@@ -603,9 +580,7 @@ footer {
         padding: 0 10vw 5vw 10vw;        
     }
 
-    .nav-bottom p, .nav-bottom a {
+    .nav-bottom span, .nav-bottom a {
         font-size: 0.75rem;
-        line-height: normal;
-        margin: 0;
     }
 }
